# BeyondUID

./: .gitignore  pyproject.toml
BeyondUID/: __init__.py  version.py
BeyondUID/beyonduid_ann/: __init__.py  draw_img.py  get_data.py  model.py
BeyondUID/beyonduid_calendar/: __init__.py  get_data.py
BeyondUID/beyonduid_config/: __init__.py  beyond_config.py  byd_config.py  config_default.py  prefix.py  set_config.py
BeyondUID/beyonduid_gachalog/: __init__.py  draw_img.py  get_gachalogs.py  model.py
BeyondUID/beyonduid_gamedata/: __init__.py  character_weapon_info.py  gacha_char_pool_data.py  gacha_weapon_pool_data.py  i18n_text.py  weapon_gem_info.py
BeyondUID/beyonduid_gem/: __init__.py  draw_img.py
BeyondUID/beyonduid_help/: __init__.py  get_help.py  help.json
BeyondUID/beyonduid_note/: __init__.py  model.py  note.py
BeyondUID/beyonduid_position/: __init__.py
BeyondUID/beyonduid_resource/: __init__.py
BeyondUID/beyonduid_server_update_check/: __init__.py  config.py  model.py  update_checker.py  utils.py
BeyondUID/beyonduid_signin/: __init__.py  model.py  signin.py
BeyondUID/beyonduid_start/: main.py
BeyondUID/beyonduid_user/: __init__.py
BeyondUID/utils/: byd_prefix.py  download.py  error_reply.py  image.py
BeyondUID/utils/database/: models.py  startup.py
BeyondUID/utils/image/: image_tools.py
BeyondUID/utils/resource/: RESOURCE_PATH.py  download_all_resource.py  download_from_cos.py
