[project]
name = "BeyondUID"
version = "0.0.1"
description = ""
authors = [
  { name = "baiqwerdvd", email = "158065462+baiqwerdvd@users.noreply.github.com" },
]
dependencies = [
  "msgspec>=0.19.0",
  "pydantic>=2.10.4",
  "fastapi>=0.115.6",
  "cryptography>=46.0.3",
  "sklandcore>=0.0.2",
  "qrcode>=8.2.0",
  "async-timeout>=5.0.1; python_version == '3.10'",
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }

[tool.gscore]
auto_update_dep = ["sklandcore>=0.0.2"]

[tool.ruff]
line-length = 108
target-version = "py310"

[tool.ruff.lint]
select = [
  "I",     # isort
  "F",     # Pyflakes
  "W",     # pycodestyle warnings
  "E",     # pycodestyle errors
  "UP",    # pyupgrade
  "ASYNC", # flake8-async
  "C4",    # flake8-comprehensions
  "T10",   # flake8-debugger
  "T20",   # flake8-print
  "PYI",   # flake8-pyi
  "PT",    # flake8-pytest-style
  "Q",     # flake8-quotes
  "RUF",   # Ruff-specific rules
]
ignore = [
  "E402",   # module-import-not-at-top-of-file
  "UP037",  # quoted-annotation
  "RUF001", # ambiguous-unicode-character-string
  "RUF002", # ambiguous-unicode-character-docstring
  "RUF003", # ambiguous-unicode-character-comment
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.basedpyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
